# rbackup

./: Cargo.toml  READEME.md  README.md  config.toml.teplate
.github/workflows/: linux-x86.yml  windows.yml
src/: backup.rs  commands.rs  config.rs  main.rs  scheduler.rs
