[package]
name = "rbackup"
version = "0.1.0"
edition = "2021"


[dependencies]
rusoto_core = "0.48"
rusoto_s3 = {version = "0.48"}
serde = "1"
serde_derive = "1"
serde_json = "1"
chrono = "0.4"
rusoto_credential = "0.48"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros","fs"] }
clap = { version = "4.5.4", features = ["derive"] }
toml = "0.8"
indicatif = "0.17.8"
futures-util = "0.3.30"
tokio-util = "0.7.11" #进度条
cron = "0.12"
ssh2="0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob="0.3"
log = "0.4.21"
[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
incremental = false
opt-level = 'z'

[build]
rustflags = ["-C", "target-feature=+crt-static"]